# goit_web_hw09

./: README.md  pyproject.toml  requirements.txt
hw9/: scrapy.cfg
hw9/hw9/: items.py  pipelines.py  settings.py
hw9/hw9/spiders/: quotes.py
mongo_hw/: finder.py
